mudamos a cor de fundo e a da barra trocamos o logo

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,6 +3,16 @@
 }
 
 #navbar img {
-    width: 300px;
+    width: 100px;
     height: 100px;
+}
+#navbar{
+    background-color: black;
+}
+
+#navbar a{
+    color: blanchedalmond;
+}
+body{
+    background-color: rgb(0, 0, 0);
 }
